# ros_gz_integration_demo

./: .gitignore  README.md
maps/: working-map-save-1.pgm  working-map-save-1.yaml
src/bringup/: package.xml  setup.py
src/bringup/config/: mapper_params_online_async.yaml  multi_drive_demo_gui.config  multi_drive_demo_ros_gz_bridge.yml  ros_gz_bridge.yml  slam_and_nav_demo_gui.config  slam_and_nav_nav2_params.yaml  slam_and_nav_v1.rviz  slam_and_nav_v4.rviz
src/bringup/launch/: _nav2_bringup_launch.py  _nav2_localization_launch.py  _nav2_navigation_launch.py  diff_drive_demo.launch.py  diff_drive_demo_controlled_by_key.launch.py  diff_drive_demo_slam_and_nav.launch.py  diff_drive_demo_v1.launch.py  multi_drive_demo.launch.py
src/bringup/models/diff_drive_ros/: model.sdf
src/bringup/models/diff_drive_slam_and_nav/: model.sdf
src/bringup/worlds/: diff_drive_demo_world.sdf  diff_drive_demo_world_slam_and_nav.sdf  diff_drive_demo_world_with_wall.sdf  empty_world.sdf  grid_demo_world.sdf  multi_drive_world.sdf
src/diff_drive_controller/: CMakeLists.txt  package.xml
src/diff_drive_controller/src/: diff_drive_controller.cpp
src/gz_plugin_dependencies/: CMakeLists.txt  package.xml
src/gz_plugin_dependencies/include/ros_gz_example_gazebo/: BasicSystem.hh
src/gz_plugin_dependencies/src/: BasicSystem.cc  FullSystem.cc
src/initialization/: CMakeLists.txt  package.xml
src/initialization/src/: initial_frame_setup.cpp
src/ros_gz_example_gazebo/: CMakeLists.txt
src/ros_gz_example_gazebo/include/ros_gz_example_gazebo/: FullSystem.hh
